# fe-interview

./: .gitignore  Makefile  docker-compose.yml
api_server/: Dockerfile  Makefile  pyproject.toml
api_server/api_server/: server.py
api_server/api_server/routers/: categories.py  detect.py
