[project]
name = "api-server"
version = "1.0.0"
description = ""
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.2",
    "httpx>=0.27.2",
    "pydantic>=2.9.2",
    "structlog>=24.4.0",
    "uvicorn>=0.32.0",
]

[tool.setuptools]
packages = ["api_server"]

[tool.hatch.build.targets.wheel]
packages = ["api_server"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
